06-adv-services-and-networking/25-ingress-networking/yaml-examples/wear-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wear-service
  namespace: app-space
spec:
  clusterIP: 10.102.76.86
  clusterIPs:
  - 10.102.76.86
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webapp-wear
  sessionAffinity: None
  type: ClusterIP
